samples/_failures_safe/1761559865_21ed26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e6b3b60.c: In function ‘main’:
./samples/SAFE/__tmp_6e6b3b60.c:165:11: error: expected ‘;’ at end of input
  165 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_6e6b3b60.c:165:5: error: expected declaration or statement at end of input
  165 |     printf
      |     ^~~~~~
